--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/node": "^22.10.1",
     "@types/ws": "^8.5.13",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
